plugins {
//    id 'org.jetbrains.intellij' version '1.17.4'
    id 'org.jetbrains.intellij.platform' version '2.10.4'
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version "1.9.25"

}

group 'tech.lin2j'
version '1.4.1-223'

repositories {
    mavenCentral()

    intellijPlatform {
        defaultRepositories()
        intellijDependencies() // 添加 IntelliJ 依赖
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.25'
    implementation 'com.hierynomus:sshj:0.39.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    // See https://github.com/JetBrains/gradle-intellij-plugin/
    intellijPlatform {
        create("IC","2022.3.3", false)
//        local 'D:\\Program Files\\ideaIU-2022.3.3.win'
        bundledPlugins 'com.intellij.java', 'org.jetbrains.plugins.terminal'
        instrumentationTools()
        javaCompiler()
    }

}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:unchecked"
}

test {
    useJUnitPlatform()
}

kotlin {
    jvmToolchain(17)
}
